--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -47,7 +47,7 @@
 <body>
   <div id="main-content">
     <h1>Adicionar Produto</h1>
-    <form id="form-produto" enctype="multipart/form-data">
+    <form id="form-produto">
       <input type="text" name="nome" placeholder="Nome do produto" required aria-required="true">
       <textarea name="descricao" placeholder="Descrição do produto" required aria-required="true"></textarea>
       <select name="categoria" required aria-required="true">
@@ -74,7 +74,7 @@
       </select>
       <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" aria-required="true">
       <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" max="100000" required aria-required="true">
-      <input type="file" name="imagens" accept="image/jpeg,image/png" multiple aria-required="true">
+      <input type="url" name="imagens" placeholder="URL da imagem (https://...)" aria-required="true">
       <p style="font-size: 14px; color: #666;">Nota: O preço será usado apenas na área administrativa e não será exibido na página principal.</p>
       <button type="submit">Adicionar</button>
     </form>
@@ -123,10 +123,11 @@
   </div>
 
   <script>
-    const VERSION = "1.0.4";
+    const VERSION = "1.0.5";
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
+    let isFetching = false;
 
     function carregarToken() {
       const token = localStorage.getItem('github_token');
@@ -147,94 +148,74 @@
       erro.textContent = '';
     }
 
-    async function resizeImage(file, maxWidth, maxHeight) {
-      return new Promise((resolve, reject) => {
-        if (file.size > 2 * 1024 * 1024) reject(new Error('Imagem muito grande. Máximo 2 MB.'));
-        if (!['image/jpeg', 'image/png'].includes(file.type)) reject(new Error('Formato de imagem não suportado. Use JPEG ou PNG.'));
-        const img = new Image();
-        img.src = URL.createObjectURL(file);
-        img.onload = () => {
-          const canvas = document.createElement('canvas');
-          let width = img.width;
-          let height = img.height;
-          if (width > height) {
-            if (width > maxWidth) {
-              height = Math.round((height * maxWidth) / width);
-              width = maxWidth;
-            }
-          } else {
-            if (height > maxHeight) {
-              width = Math.round((width * maxHeight) / height);
-              height = maxHeight;
-            }
+    async function carregarProdutos() {
+      if (isFetching) return;
+      isFetching = true;
+      const mensagem = document.getElementById('mensagem');
+      const erro = document.getElementById('erro');
+      const loading = document.getElementById('loading');
+      try {
+        loading.style.display = 'block';
+        const response = await fetch('https://raw.githubusercontent.com/bingaby/centrodecompra/main/produtos.json');
+        if (!response.ok) {
+          if (response.status === 404) {
+            produtos = [];
+            document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
+            atualizarListaProdutos();
+            return;
           }
-          canvas.width = width;
-          canvas.height = height;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0, width, height);
-          canvas.toBlob((blob) => resolve(blob), 'image/jpeg', 0.8);
-        };
-        img.onerror = () => reject(new Error('Erro ao carregar imagem.'));
-      });
-    }
-
-    async function adicionarProduto(formData) {
-      const response = await fetch('/produtos', {
-        method: 'POST',
-        body: formData
-      });
-      if (!response.ok) {
-        const errorData = await response.json();
-        throw new Error(errorData.message || 'Erro ao adicionar produto');
+          throw new Error(`Erro HTTP: ${response.status}`);
+        }
+        if (response.headers.get('Content-Type') !== 'application/json') {
+          throw new Error('Resposta não é JSON');
+        }
+        produtos = await response.json();
+        document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
+        atualizarListaProdutos();
+      } catch (error) {
+        console.error('Erro ao carregar produtos:', error);
+        erro.textContent = 'Erro ao carregar produtos. Verifique a URL ou o arquivo produtos.json.';
+        mensagem.textContent = '';
+      } finally {
+        loading.style.display = 'none';
+        isFetching = false;
       }
-      return await response.json();
     }
 
-    function atualizarJSON() {
-      const jsonText = document.getElementById('json-text');
-      fetch('/produtos')
-        .then(response => response.json())
-        .then(data => {
-          jsonText.value = JSON.stringify(data, null, 2);
-        })
-        .catch(error => {
-          console.error('Erro ao atualizar JSON:', error);
-          document.getElementById('erro').textContent = 'Erro ao carregar JSON.';
-        });
+    async function adicionarProduto(produto) {
+      produtos.push({
+        _id: Date.now().toString(),
+        ...produto,
+        imagens: produto.imagens ? [produto.imagens] : []
+      });
+      document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
+      atualizarListaProdutos();
+      await atualizarGitHub(true);
     }
 
     function atualizarListaProdutos() {
       const listaProdutos = document.getElementById('lista-produtos');
-      fetch('/produtos')
-        .then(response => response.json())
-        .then(data => {
-          produtos = data;
-          listaProdutos.innerHTML = '';
-          if (produtos.length === 0) {
-            listaProdutos.innerHTML = '<tr><td colspan="8">Nenhum produto cadastrado.</td></tr>';
-            return;
-          }
-          produtos.forEach((produto, index) => {
-            const tr = document.createElement('tr');
-            const imagens = produto.imagens || [];
-            const precoFormatado = produto.preco ? `R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')}` : 'R$ 0,00';
-            tr.innerHTML = `
-              <td>${produto.nome}</td>
-              <td>${produto.descricao}</td>
-              <td>${produto.categoria}</td>
-              <td>${produto.loja}</td>
-              <td><a href="${produto.link}" target="_blank">Link</a></td>
-              <td><a href="${produto.link}" target="_blank" class="preco-link">${precoFormatado}</a></td>
-              <td>${imagens.length > 0 ? imagens.map((img, i) => `<img src="${img}" alt="Imagem ${i + 1}" class="thumbnail" onclick="openModal(${index}, ${i})">`).join('') : 'Nenhuma imagem'}</td>
-              <td><button class="excluir" onclick="excluirProduto('${produto._id}')">Excluir</button></td>
-            `;
-            listaProdutos.appendChild(tr);
-          });
-        })
-        .catch(error => {
-          console.error('Erro ao carregar produtos:', error);
-          document.getElementById('erro').textContent = 'Erro ao carregar produtos.';
-        });
+      listaProdutos.innerHTML = '';
+      if (produtos.length === 0) {
+        listaProdutos.innerHTML = '<tr><td colspan="8">Nenhum produto cadastrado.</td></tr>';
+        return;
+      }
+      produtos.forEach((produto, index) => {
+        const tr = document.createElement('tr');
+        const imagens = produto.imagens || [];
+        const precoFormatado = produto.preco ? `R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')}` : 'R$ 0,00';
+        tr.innerHTML = `
+          <td>${produto.nome}</td>
+          <td>${produto.descricao}</td>
+          <td>${produto.categoria}</td>
+          <td>${produto.loja}</td>
+          <td><a href="${produto.link}" target="_blank">Link</a></td>
+          <td><a href="${produto.link}" target="_blank" class="preco-link">${precoFormatado}</a></td>
+          <td>${imagens.length > 0 ? imagens.map((img, i) => `<img src="${img}" alt="Imagem ${i + 1}" class="thumbnail" onclick="openModal(${index}, ${i})">`).join('') : 'Nenhuma imagem'}</td>
+          <td><button class="excluir" onclick="excluirProduto('${produto._id}')">Excluir</button></td>
+        `;
+        listaProdutos.appendChild(tr);
+      });
     }
 
     async function excluirProduto(id) {
@@ -243,18 +224,18 @@
       const loading = document.getElementById('loading');
       try {
         loading.style.display = 'block';
-        const response = await fetch(`/produtos/${id}`, { method: 'DELETE' });
-        if (!response.ok) throw new Error('Erro ao excluir produto');
-        mensagem.textContent = 'Produto excluído com sucesso!';
-        erro.textContent = '';
-        atualizarJSON();
+        produtos = produtos.filter(p => p._id !== id);
+        document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
         atualizarListaProdutos();
         await atualizarGitHub(true);
-      } catch (e) {
-        erro.textContent = e.message || 'Erro ao excluir produto.';
+        mensagem.textContent = 'Produto excluído com sucesso!';
+        erro.textContent = '';
+      } catch (error) {
+        erro.textContent = error.message || 'Erro ao excluir produto.';
         mensagem.textContent = '';
+      } finally {
+        loading.style.display = 'none';
       }
-      loading.style.display = 'none';
     }
 
     async function atualizarGitHub(auto = false) {
@@ -270,8 +251,8 @@
         return;
       }
       try {
-        loading.style.display = 'block';
-        const parsedJson = JSON.parse(jsonText);
+        if (!auto) loading.style.display = 'block';
+        JSON.parse(jsonText); // Validar JSON
         let sha = null;
         const getResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
           method: 'GET',
@@ -300,18 +281,18 @@
             branch: 'main'
           })
         });
-        if (updateResponse.ok) {
-          mensagem.textContent = 'produtos.json atualizado no GitHub! Pode demorar alguns minutos para aparecer na página principal.';
-          erro.textContent = '';
-        } else {
+        if (!updateResponse.ok) {
           const errorData = await updateResponse.json();
           throw new Error(errorData.message || 'Erro ao atualizar produtos.json');
         }
+        mensagem.textContent = 'produtos.json atualizado no GitHub! Pode demorar alguns minutos para aparecer na página principal.';
+        erro.textContent = '';
       } catch (error) {
-        erro.textContent = error.message || 'Erro ao sincronizar com o GitHub.';
+        erro.textContent = error.message || 'Erro ao sincronizar com o GitHub. Verifique o token ou conexão.';
         mensagem.textContent = '';
+      } finally {
+        if (!auto) loading.style.display = 'none';
       }
-      if (!auto) loading.style.display = 'none';
     }
 
     async function importarJSON() {
@@ -324,30 +305,24 @@
         const importedProdutos = JSON.parse(importText);
         if (!Array.isArray(importedProdutos)) throw new Error('JSON inválido! Deve ser uma lista de produtos.');
         for (const produto of importedProdutos) {
-          const formData = new FormData();
-          formData.append('nome', produto.nome);
-          formData.append('descricao', produto.descricao || '');
-          formData.append('categoria', produto.categoria);
-          formData.append('loja', produto.loja);
-          formData.append('link', produto.link);
-          formData.append('preco', produto.preco);
-          for (const img of produto.imagens) {
-            const response = await fetch(img);
-            const blob = await response.blob();
-            formData.append('imagens', blob, `image-${Date.now()}.jpg`);
+          if (!produto.nome || !produto.descricao || !produto.categoria || !produto.loja || !produto.link) {
+            throw new Error('Produto inválido! Verifique os campos obrigatórios.');
           }
-          await adicionarProduto(formData);
+          produto._id = Date.now().toString() + Math.random().toString(36).substr(2, 9);
+          produtos.push(produto);
         }
+        document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
+        atualizarListaProdutos();
+        await atualizarGitHub(true);
         mensagem.textContent = 'Produtos importados com sucesso!';
         erro.textContent = '';
         document.getElementById('import-json').value = '';
-        atualizarJSON();
-        atualizarListaProdutos();
       } catch (error) {
         erro.textContent = error.message || 'Erro ao importar JSON.';
         mensagem.textContent = '';
+      } finally {
+        loading.style.display = 'none';
       }
-      loading.style.display = 'none';
     }
 
     function openModal(produtoIndex, imageIndex) {
@@ -389,8 +364,7 @@
 
     document.addEventListener('DOMContentLoaded', () => {
       carregarToken();
-      atualizarListaProdutos();
-      atualizarJSON();
+      carregarProdutos();
 
       const formProduto = document.getElementById('form-produto');
       formProduto.addEventListener('submit', async (e) => {
@@ -401,17 +375,25 @@
         try {
           loading.style.display = 'block';
           const formData = new FormData(formProduto);
-          await adicionarProduto(formData);
+          const produto = {
+            nome: formData.get('nome'),
+            descricao: formData.get('descricao'),
+            categoria: formData.get('categoria'),
+            loja: formData.get('loja'),
+            link: formData.get('link'),
+            preco: formData.get('preco'),
+            imagens: formData.get('imagens')
+          };
+          await adicionarProduto(produto);
           mensagem.textContent = 'Produto adicionado com sucesso!';
           erro.textContent = '';
           formProduto.reset();
-          atualizarListaProdutos();
-          await atualizarGitHub(true);
         } catch (error) {
           erro.textContent = error.message || 'Erro ao adicionar produto.';
           mensagem.textContent = '';
+        } finally {
+          loading.style.display = 'none';
         }
-        loading.style.display = 'none';
       });
 
       const imageModal = document.getElementById('imageModal');
