--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -47,7 +47,7 @@
 <body>
   <div id="main-content">
     <h1>Adicionar Produto</h1>
-    <form id="form-produto">
+    <form id="form-produto" enctype="multipart/form-data">
       <input type="text" name="nome" placeholder="Nome do produto" required aria-required="true">
       <textarea name="descricao" placeholder="Descrição do produto" required aria-required="true"></textarea>
       <select name="categoria" required aria-required="true">
@@ -74,7 +74,7 @@
       </select>
       <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" aria-required="true">
       <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" max="100000" required aria-required="true">
-      <input type="url" name="imagens" placeholder="URL da imagem (https://...)" aria-required="true">
+      <input type="file" name="imagens" accept="image/jpeg,image/png" multiple aria-required="true">
       <p style="font-size: 14px; color: #666;">Nota: O preço será usado apenas na área administrativa e não será exibido na página principal.</p>
       <button type="submit">Adicionar</button>
     </form>
@@ -123,7 +123,8 @@
   </div>
 
   <script>
-    const VERSION = "1.0.5";
+    const VERSION = "1.0.6";
+    const IMGBB_API_KEY = 'SUA_CHAVE_IMGBB'; // Substitua pela sua chave do imgbb
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
@@ -146,6 +147,54 @@
       localStorage.setItem('github_token', token);
       mensagem.textContent = 'Token salvo com sucesso!';
       erro.textContent = '';
+    }
+
+    async function resizeImage(file, maxWidth = 800, maxHeight = 800) {
+      return new Promise((resolve, reject) => {
+        if (file.size > 2 * 1024 * 1024) reject(new Error('Imagem muito grande. Máximo 2 MB.'));
+        if (!['image/jpeg', 'image/png'].includes(file.type)) reject(new Error('Formato de imagem não suportado. Use JPEG ou PNG.'));
+        const img = new Image();
+        img.src = URL.createObjectURL(file);
+        img.onload = () => {
+          const canvas = document.createElement('canvas');
+          let width = img.width;
+          let height = img.height;
+          if (width > height) {
+            if (width > maxWidth) {
+              height = Math.round((height * maxWidth) / width);
+              width = maxWidth;
+            }
+          } else {
+            if (height > maxHeight) {
+              width = Math.round((width * maxHeight) / height);
+              height = maxHeight;
+            }
+          }
+          canvas.width = width;
+          canvas.height = height;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(img, 0, 0, width, height);
+          canvas.toBlob((blob) => resolve(blob), 'image/jpeg', 0.8);
+        };
+        img.onerror = () => reject(new Error('Erro ao carregar imagem.'));
+      });
+    }
+
+    async function uploadImage(file) {
+      try {
+        const resizedBlob = await resizeImage(file);
+        const formData = new FormData();
+        formData.append('image', resizedBlob, file.name);
+        const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, {
+          method: 'POST',
+          body: formData
+        });
+        const data = await response.json();
+        if (!data.success) throw new Error(data.error.message || 'Erro ao fazer upload da imagem');
+        return data.data.url;
+      } catch (error) {
+        throw new Error(error.message || 'Falha no upload da imagem');
+      }
     }
 
     async function carregarProdutos() {
@@ -182,12 +231,24 @@
       }
     }
 
-    async function adicionarProduto(produto) {
-      produtos.push({
-        _id: Date.now().toString(),
-        ...produto,
-        imagens: produto.imagens ? [produto.imagens] : []
-      });
+    async function adicionarProduto(formData) {
+      const imagens = [];
+      const files = formData.getAll('imagens');
+      for (const file of files) {
+        const url = await uploadImage(file);
+        imagens.push(url);
+      }
+      const produto = {
+        _id: Date.now().toString() + Math.random().toString(36).substr(2, 9),
+        nome: formData.get('nome'),
+        descricao: formData.get('descricao'),
+        categoria: formData.get('categoria'),
+        loja: formData.get('loja'),
+        link: formData.get('link'),
+        preco: formData.get('preco'),
+        imagens
+      };
+      produtos.push(produto);
       document.getElementById('json-text').value = JSON.stringify(produtos, null, 2);
       atualizarListaProdutos();
       await atualizarGitHub(true);
@@ -375,16 +436,7 @@
         try {
           loading.style.display = 'block';
           const formData = new FormData(formProduto);
-          const produto = {
-            nome: formData.get('nome'),
-            descricao: formData.get('descricao'),
-            categoria: formData.get('categoria'),
-            loja: formData.get('loja'),
-            link: formData.get('link'),
-            preco: formData.get('preco'),
-            imagens: formData.get('imagens')
-          };
-          await adicionarProduto(produto);
+          await adicionarProduto(formData);
           mensagem.textContent = 'Produto adicionado com sucesso!';
           erro.textContent = '';
           formProduto.reset();
