--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -74,7 +74,10 @@
       </select>
       <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" aria-required="true">
       <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" max="100000" required aria-required="true">
-      <input type="file" name="imagens" accept="image/jpeg,image/png" multiple>
+      <input type="text" name="imagens" placeholder="URLs das imagens (separadas por vírgula, ex.: https://raw.githubusercontent.com/...)" aria-required="false">
+      <p style="font-size: 14px; color: #666;">
+        Para imagens, faça upload para o repositório <a href="https://github.com/bingaby/centrodecompra/tree/main/imagens" target="_blank">/imagens</a> no GitHub e use a URL raw (ex.: https://raw.githubusercontent.com/bingaby/centrodecompra/main/imagens/nome.jpg). Separe múltiplas URLs por vírgulas.
+      </p>
       <p style="font-size: 14px; color: #666;">Nota: O preço será usado apenas na área administrativa e não será exibido na página principal.</p>
       <button type="submit">Adicionar</button>
     </form>
@@ -123,8 +126,7 @@
   </div>
 
   <script>
-    const VERSION = "1.0.7";
-    const IMGBB_API_KEY = 'SUA_CHAVE_IMGBB'; // Substitua pela sua chave do imgbb (obtenha em https://api.imgbb.com/)
+    const VERSION = "1.0.8";
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
@@ -147,57 +149,6 @@
       localStorage.setItem('github_token', token);
       mensagem.textContent = 'Token salvo com sucesso!';
       erro.textContent = '';
-    }
-
-    async function resizeImage(file, maxWidth = 800, maxHeight = 800) {
-      return new Promise((resolve, reject) => {
-        if (file.size > 2 * 1024 * 1024) reject(new Error('Imagem muito grande. Máximo 2 MB.'));
-        if (!['image/jpeg', 'image/png'].includes(file.type)) reject(new Error('Formato de imagem não suportado. Use JPEG ou PNG.'));
-        const img = new Image();
-        img.src = URL.createObjectURL(file);
-        img.onload = () => {
-          const canvas = document.createElement('canvas');
-          let width = img.width;
-          let height = img.height;
-          if (width > height) {
-            if (width > maxWidth) {
-              height = Math.round((height * maxWidth) / width);
-              width = maxWidth;
-            }
-          } else {
-            if (height > maxHeight) {
-              width = Math.round((width * maxHeight) / height);
-              height = maxHeight;
-            }
-          }
-          canvas.width = width;
-          canvas.height = height;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0, width, height);
-          canvas.toBlob((blob) => resolve(blob), 'image/jpeg', 0.8);
-        };
-        img.onerror = () => reject(new Error('Erro ao carregar imagem.'));
-      });
-    }
-
-    async function uploadImage(file) {
-      if (IMGBB_API_KEY === 'SUA_CHAVE_IMGBB') {
-        throw new Error('Chave do imgbb não configurada. Substitua IMGBB_API_KEY no código.');
-      }
-      try {
-        const resizedBlob = await resizeImage(file);
-        const formData = new FormData();
-        formData.append('image', resizedBlob, file.name);
-        const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, {
-          method: 'POST',
-          body: formData
-        });
-        const data = await response.json();
-        if (!data.success) throw new Error(data.error.message || 'Erro ao fazer upload da imagem');
-        return data.data.url;
-      } catch (error) {
-        throw new Error(error.message || 'Falha no upload da imagem. Verifique a conexão ou a chave do imgbb.');
-      }
     }
 
     async function carregarProdutos() {
@@ -251,14 +202,8 @@
     }
 
     async function adicionarProduto(formData) {
-      const imagens = [];
-      const files = formData.getAll('imagens');
-      for (const file of files) {
-        if (file.size > 0) { // Ignorar arquivos vazios
-          const url = await uploadImage(file);
-          imagens.push(url);
-        }
-      }
+      const imagensInput = formData.get('imagens') || '';
+      const imagens = imagensInput.split(',').map(url => url.trim()).filter(url => url && url.startsWith('https://'));
       const produto = {
         _id: Date.now().toString() + Math.random().toString(36).substr(2, 9),
         nome: formData.get('nome'),
