--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -74,10 +74,8 @@
       </select>
       <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" aria-required="true">
       <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" max="100000" required aria-required="true">
-      <input type="text" name="imagens" placeholder="URLs das imagens (separadas por vírgula, ex.: https://raw.githubusercontent.com/...)" aria-required="false">
-      <p style="font-size: 14px; color: #666;">
-        Para imagens, faça upload para o repositório <a href="https://github.com/bingaby/centrodecompra/tree/main/imagens" target="_blank">/imagens</a> no GitHub e use a URL raw (ex.: https://raw.githubusercontent.com/bingaby/centrodecompra/main/imagens/nome.jpg). Separe múltiplas URLs por vírgulas.
-      </p>
+      <input type="file" name="imagens" accept="image/jpeg,image/png" multiple>
+      <p style="font-size: 14px; color: #666;">Selecione imagens (JPEG/PNG, máx. 500 KB cada, até 3 por produto). Elas serão embutidas no produtos.json.</p>
       <p style="font-size: 14px; color: #666;">Nota: O preço será usado apenas na área administrativa e não será exibido na página principal.</p>
       <button type="submit">Adicionar</button>
     </form>
@@ -126,7 +124,7 @@
   </div>
 
   <script>
-    const VERSION = "1.0.8";
+    const VERSION = "1.0.9";
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
@@ -149,6 +147,17 @@
       localStorage.setItem('github_token', token);
       mensagem.textContent = 'Token salvo com sucesso!';
       erro.textContent = '';
+    }
+
+    async function convertImageToBase64(file) {
+      return new Promise((resolve, reject) => {
+        if (file.size > 500 * 1024) reject(new Error('Imagem muito grande. Máximo 500 KB.'));
+        if (!['image/jpeg', 'image/png'].includes(file.type)) reject(new Error('Formato não suportado. Use JPEG ou PNG.'));
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.onerror = () => reject(new Error('Erro ao converter imagem.'));
+        reader.readAsDataURL(file);
+      });
     }
 
     async function carregarProdutos() {
@@ -202,8 +211,15 @@
     }
 
     async function adicionarProduto(formData) {
-      const imagensInput = formData.get('imagens') || '';
-      const imagens = imagensInput.split(',').map(url => url.trim()).filter(url => url && url.startsWith('https://'));
+      const imagens = [];
+      const files = formData.getAll('imagens');
+      if (files.length > 3) throw new Error('Máximo de 3 imagens por produto.');
+      for (const file of files) {
+        if (file.size > 0) {
+          const base64 = await convertImageToBase64(file);
+          imagens.push(base64);
+        }
+      }
       const produto = {
         _id: Date.now().toString() + Math.random().toString(36).substr(2, 9),
         nome: formData.get('nome'),
