--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -124,7 +124,7 @@
   </div>
 
   <script>
-    const VERSION = "1.0.9";
+    const VERSION = "1.0.10";
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
@@ -149,14 +149,43 @@
       erro.textContent = '';
     }
 
-    async function convertImageToBase64(file) {
+    async function compressImage(file, maxWidth = 800, maxHeight = 800) {
       return new Promise((resolve, reject) => {
         if (file.size > 500 * 1024) reject(new Error('Imagem muito grande. Máximo 500 KB.'));
         if (!['image/jpeg', 'image/png'].includes(file.type)) reject(new Error('Formato não suportado. Use JPEG ou PNG.'));
+        const img = new Image();
+        img.src = URL.createObjectURL(file);
+        img.onload = () => {
+          const canvas = document.createElement('canvas');
+          let width = img.width;
+          let height = img.height;
+          if (width > maxWidth) {
+            height = Math.round((height * maxWidth) / width);
+            width = maxWidth;
+          }
+          if (height > maxHeight) {
+            width = Math.round((width * maxHeight) / height);
+            height = maxHeight;
+          }
+          canvas.width = width;
+          canvas.height = height;
+          canvas.getContext('2d').drawImage(img, 0, 0, width, height);
+          canvas.toBlob(blob => {
+            if (blob.size > 500 * 1024) reject(new Error('Imagem comprimida ainda excede 500 KB.'));
+            resolve(blob);
+          }, 'image/jpeg', 0.7);
+        };
+        img.onerror = () => reject(new Error('Erro ao comprimir imagem.'));
+      });
+    }
+
+    async function convertImageToBase64(file) {
+      const compressed = await compressImage(file);
+      return new Promise((resolve, reject) => {
         const reader = new FileReader();
         reader.onload = () => resolve(reader.result);
         reader.onerror = () => reject(new Error('Erro ao converter imagem.'));
-        reader.readAsDataURL(file);
+        reader.readAsDataURL(compressed);
       });
     }
 
@@ -295,7 +324,12 @@
       }
       try {
         if (!auto) loading.style.display = 'block';
-        JSON.parse(jsonText); // Validar JSON
+        // Validar JSON antes de enviar
+        const parsedJson = JSON.parse(jsonText);
+        const jsonSize = new TextEncoder().encode(jsonText).length;
+        if (jsonSize > 90 * 1024 * 1024) { // 90 MB para margem
+          throw new Error('Arquivo produtos.json excede 90 MB. Remova imagens ou use URLs.');
+        }
         let sha = null;
         const getResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
           method: 'GET',
@@ -377,7 +411,7 @@
       if (currentImages.length === 0) return;
       carrosselImagens.innerHTML = currentImages.map((img) => `<img src="${img}" alt="Imagem ampliada">`).join('');
       carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
-      carrosselDots.innerHTML = currentImages.map((_, i) => `<span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>`).join('');
+      carrosselDots.innerHTML = currentImages.map((_, i) => `<span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})" aria-label="Ir para imagem ${i + 1}"></span>`).join('');
       modal.style.display = 'flex';
     }
 
