--- a/index.html
+++ b/index.html
@@ -1,145 +1,125 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
-  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta property="og:image" content="logos/centrodecompras.jpg">
-  <meta property="og:url" content="https://seu-site.com">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta name="twitter:image" content="logos/centrodecompras.jpg">
-  <title>Centro de Compras - Ofertas do Dia</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Centro de Compras</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f2f2f2; }
+    header, footer { background: #333; color: white; text-align: center; padding: 10px; }
+    .busca-container { text-align: center; padding: 10px; }
+    #busca { padding: 8px; width: 80%; max-width: 400px; }
+    .grid { display: flex; flex-wrap: wrap; justify-content: center; padding: 10px; }
+    .produto-card { background: white; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin: 10px; padding: 15px; width: 250px; text-align: center; }
+    .produto-card img { width: 100%; height: auto; border-radius: 5px; }
+    .botao-comprar { background: #28a745; color: white; padding: 10px; display: inline-block; border-radius: 5px; text-decoration: none; margin-top: 10px; }
+    #mensagem-vazia, #busca-feedback, #loading-spinner { text-align: center; padding: 10px; display: none; }
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="logo-container">
-      <a href="#">
-        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="logo" loading="lazy" aria-label="Logo - clique duplo para acessar a administração" />
-      </a>
-    </div>
-    <div class="header-text">
-      <h1>Centro de Compras</h1>
-      <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
-    </div>
-  </header>
 
-  <nav>
-    <a href="index.html">Promoções</a>
-    <a href="cupom.html">Cupom de desconto</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="contato.html">Contato</a>
-  </nav>
+<header>
+  <h1 id="logo">Centro de Compras</h1>
+</header>
 
-  <div class="container">
-    <aside class="sidebar-categorias">
-      <h3>Categorias</h3>
-      <ul>
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')" role="button" aria-label="Filtrar por Todas as Categorias">Todas as Categorias</li>
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')" role="button" aria-label="Filtrar por Eletrônicos">Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')" role="button" aria-label="Filtrar por Moda">Moda</li>
-        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')" role="button" aria-label="Filtrar por Fitness">Fitness</li>
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')" role="button" aria-label="Filtrar por Casa e Decoração">Casa e Decoração</li>
-        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')" role="button" aria-label="Filtrar por Beleza">Beleza</li>
-        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')" role="button" aria-label="Filtrar por Esportes">Esportes</li>
-        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')" role="button" aria-label="Filtrar por Livros">Livros</li>
-        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')" role="button" aria-label="Filtrar por Infantil">Infantil</li>
-        <li class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')" role="button" aria-label="Filtrar por Celulares">Celulares</li>
-        <li class="categoria-item" data-categoria="Eletrodomésticos" onclick="filtrarPorCategoria('Eletrodomésticos')" role="button" aria-label="Filtrar por Eletrodomésticos">Eletrodomésticos</li>
-      </ul>
-    </aside>
+<div class="busca-container">
+  <input type="text" id="busca" placeholder="Buscar produtos...">
+  <div id="busca-feedback">Buscando...</div>
+</div>
 
-    <main>
-      <section id="ofertas-section">
-        <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
-        <div class="lojas-parceiras">
-          <h3>🌟 Lojas Parceiras</h3>
-          <div class="grid-lojas">
-            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')" role="button" aria-label="Filtrar por Todas as Lojas">
-              <span>Todas as Lojas</span>
-            </div>
-            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" role="button" aria-label="Filtrar por Amazon">
-              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy">
-              <span class="amazon">Amazon</span>
-            </div>
-            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" role="button" aria-label="Filtrar por Magalu">
-              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy">
-              <span class="magalu">Magalu</span>
-            </div>
-            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" role="button" aria-label="Filtrar por Shein">
-              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy">
-              <span class="shein">Shein</span>
-            </div>
-            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" role="button" aria-label="Filtrar por Shopee">
-              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy">
-              <span class="shopee">Shopee</span>
-            </div>
-            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" role="button" aria-label="Filtrar por Mercado Livre">
-              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy">
-              <span class="mercadolivre">Mercado Livre</span>
-            </div>
-            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" role="button" aria-label="Filtrar por Alibaba">
-              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy">
-              <span class="alibaba">Alibaba</span>
-            </div>
-          </div>
-        </div>
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao">
-        <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
-        <div id="busca-feedback" class="busca-feedback">Buscando...</div>
-        <div class="loading-spinner" id="loading-spinner">Carregando...</div>
-        <div class="grid-lojas" id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
-      </section>
+<div id="loading-spinner">Carregando produtos...</div>
+<div id="mensagem-vazia"></div>
+<div id="grid-produtos" class="grid"></div>
 
-      <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
-      <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
+<footer>
+  &copy; <span id="year"></span> Centro de Compras
+</footer>
 
-      <div class="social-links">
-        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank">
-          <div class="icon">
-            <img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy">
-          </div>
-          <span>TikTok</span>
-        </a>
-        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
-          <div class="icon">
-            <img src="logos/instagram.png" alt="Ícone do Instagram" loading="lazy">
-          </div>
-          <span>Instagram</span>
-        </a>
-        <a href="https://x.com/ComprasCdc" target="_blank">
-          <div class="icon">
-            <img src="logos/x.png" alt="Ícone do X" loading="lazy">
-          </div>
-          <span>X</span>
-        </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
-          <div class="icon">
-            <img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy">
-          </div>
-          <span>YouTube</span>
-        </a>
-      </div>
-    </main>
-  </div>
+<script>
+  let produtos = [];
+  let categoriaSelecionada = 'todas';
+  let lojaSelecionada = 'todas';
 
-  <footer>
-    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compras "CdC"</strong> © <span id="year"></span></p>
-  </footer>
+  async function carregarProdutos() {
+    const gridProdutos = document.getElementById('grid-produtos');
+    const mensagemVazia = document.getElementById('mensagem-vazia');
+    const loadingSpinner = document.getElementById('loading-spinner');
+    const buscaFeedback = document.getElementById('busca-feedback');
 
-  <div class="robo-assistente">
-    <a href="https://wa.me/5521975179737" target="_blank">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem">
-      <div class="robo-texto">Posso ajudar?</div>
-    </a>
-  </div>
+    try {
+      loadingSpinner.style.display = 'block';
+      mensagemVazia.style.display = 'none';
+      buscaFeedback.style.display = 'none';
 
-  <script src="script.js"></script>
+      // Carregar JSON diretamente do GitHub
+      const response = await fetch('https://raw.githubusercontent.com/bingaby/centrodecompra/main/data/produtos.json');
+      if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
+
+      produtos = await response.json();
+      filtrarProdutos();
+    } catch (error) {
+      console.error('Erro:', error);
+      gridProdutos.innerHTML = '';
+      mensagemVazia.textContent = 'Erro ao carregar produtos. Verifique a conexão ou o link dos dados.';
+      mensagemVazia.style.display = 'block';
+    } finally {
+      loadingSpinner.style.display = 'none';
+    }
+  }
+
+  function filtrarProdutos() {
+    const busca = document.getElementById('busca').value.toLowerCase();
+    const gridProdutos = document.getElementById('grid-produtos');
+    const mensagemVazia = document.getElementById('mensagem-vazia');
+
+    const produtosFiltrados = produtos.filter(produto =>
+      (categoriaSelecionada === 'todas' || produto.categoria.toLowerCase() === categoriaSelecionada.toLowerCase()) &&
+      (lojaSelecionada === 'todas' || produto.loja.toLowerCase() === lojaSelecionada.toLowerCase()) &&
+      (produto.nome.toLowerCase().includes(busca) || produto.descricao.toLowerCase().includes(busca))
+    );
+
+    gridProdutos.innerHTML = '';
+    if (!produtosFiltrados.length) {
+      mensagemVazia.textContent = 'Nenhum produto encontrado.';
+      mensagemVazia.style.display = 'block';
+      return;
+    }
+
+    mensagemVazia.style.display = 'none';
+    produtosFiltrados.forEach(produto => {
+      const nomeImagem = produto.imagens?.[0] || 'sem-imagem.jpg';
+      const imagemURL = `https://raw.githubusercontent.com/bingaby/centrodecompra/main/uplor/${nomeImagem}`;
+
+      const card = document.createElement('div');
+      card.className = 'produto-card';
+      card.innerHTML = `
+        <img src="${imagemURL}" alt="${produto.nome}" loading="lazy">
+        <h3>${produto.nome}</h3>
+        <p>${produto.descricao}</p>
+        <p><strong>Loja:</strong> ${produto.loja}</p>
+        <p><strong>Preço:</strong> R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')}</p>
+        <a href="${produto.link}" target="_blank" rel="noopener noreferrer" class="botao-comprar">Comprar</a>
+      `;
+      gridProdutos.appendChild(card);
+    });
+  }
+
+  document.getElementById('busca').addEventListener('input', () => {
+    const buscaFeedback = document.getElementById('busca-feedback');
+    buscaFeedback.style.display = 'block';
+    setTimeout(() => {
+      buscaFeedback.style.display = 'none';
+      filtrarProdutos();
+    }, 500);
+  });
+
+  document.getElementById('logo').addEventListener('dblclick', () => {
+    window.location.href = 'admin-xyz-123.html';
+  });
+
+  document.getElementById('year').textContent = new Date().getFullYear();
+  document.addEventListener('DOMContentLoaded', carregarProdutos);
+</script>
+
 </body>
 </html>
